test/Fail/UnknownImplicitInstance.err
UnknownImplicitInstance.agda:12.5-6: error: [GenericError]
Instance search can only be used to find elements in a named type
when checking that the expression f has type Set
